member-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      containers:
        - image: ks00141/member
          name: member
          ports:
            - containerPort: 8080
