member-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: member
