mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
