ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: index-service
                port:
                  number: 80
          - path: /members
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
